# doc_digest

./: .env.example  .gitignore  01_YOUR_FOUR_WORLDS.txt  CHANGES.md  DESIGN.md  GRAFF_README.md  IMPLEMENTATION_SUMMARY.md  PROMPTING_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  render.yaml  requirements.txt  schema.sql  seed_bloom_verbs.sql  test_chapter.txt  test_chapter_simple.txt  test_graff_pipeline.py  test_phase1.py  test_phase1_output.json  test_phase2.py  test_sample.txt
examples/: sample_analytical_metadata.json  sample_comprehension_pass.json  sample_propositional_extraction.json  sample_structural_outline.json  sample_system_metadata.json
prompts/: pass1_structure.txt  pass2_propositions.txt  pass3_takeaways.txt  phase1_system.txt  phase2_system.txt  unified_system.txt
sample_data/: 01_photosynthesis_short.txt  02_american_revolution_medium.txt  03_algorithms_basics.txt  04_scientific_method_quick.txt  05_critical_thinking.txt
src/: __init__.py  app.py  models.py
src/db/: __init__.py  connection.py  schema.sql
src/schemas/: chapter-analysis.schema.json
src/services/: __init__.py  graff_orchestrator.py  llm_client.py  openai_client.py  orchestrator.py  prompts.py
src/utils/: __init__.py  logging_config.py  validation.py
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: conftest.py  test_api.py  test_storage.py  test_validation.py
