[project]
name = "doc-digester"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "jsonschema==4.23.0",
  "python-multipart==0.0.9",
  "openai==1.54.3",
  "python-dotenv==1.0.0",
  "tenacity==8.2.3"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-asyncio==0.21.1",
  "httpx==0.25.1",
  "mypy==1.7.1"
]

[tool.uvicorn]
factory = false
reload = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
